<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ejerciciocontroles3.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masa" />

                <Spinner
                    android:id="@+id/sp_principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_masa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/elegir_masa" />

                <TextView
                    android:id="@+id/txt_masa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipomasa"
                    android:textSize="@dimen/d20"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/d20"
                android:layout_marginTop="@dimen/d20">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredientes"
                    android:textSize="@dimen/d15"/>

                <CheckBox
                    android:id="@+id/cb_pollo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bacon" />

                <CheckBox
                    android:id="@+id/cb_ternera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pollo" />

                <CheckBox
                    android:id="@+id/cb_peperoni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peperoni" />

                <CheckBox
                    android:id="@+id/cb_bacon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ternera" />

                <CheckBox
                    android:id="@+id/cb_champiñones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/champiñones" />

                <CheckBox
                    android:id="@+id/cb_cebolla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cebolla" />

                <Button
                    android:id="@+id/btn_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/elegir_ingredientes" />

                <TextView
                    android:id="@+id/txt_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipoingredientes"
                    android:textSize="@dimen/d20"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/d20"
                android:layout_marginTop="@dimen/d20">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tamaño"
                    android:textSize="@dimen/d15"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pequeña" />

                    <RadioButton
                        android:id="@+id/radioButton8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mediana" />

                    <RadioButton
                        android:id="@+id/radioButton9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grande" />
                </RadioGroup>

                <Button
                    android:id="@+id/btn_tamaño"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/elegir_tamaño" />

                <TextView
                    android:id="@+id/txt_tamaño"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipotamaño"
                    android:textSize="@dimen/d20"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
